Update Github Pages Deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,36 @@
-name: TestSim - Build Site
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  test:
-    name: Rebuild Site
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-        with:
-          lfs: true
-
+      - name: Checkout
+        uses: actions/checkout@v4
       # Ideally this makes the next step run faster
       # But I haven't noticed a speed difference
       # May want to cache the ./node_modules directory directly...
@@ -30,32 +46,22 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-
       - name: Install Node Modules
         run: npm install
-
       # Switching the HTML entrypoint over to the build
       - name: Pre-Process Site
         run: |
           sed -e 's/\/src\//\/build\//g' index.html > index.html.tmp
           mv index.html.tmp index.html
-
       - name: Run esbuild
         run: npm run build
-
-      - name: Commit the Updated Build Artifacts
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Actions"
-          git add build
-          git add index.html
-          git diff-index --quiet HEAD || git commit -m "Rebuild Site"
-
-      # Force Push from main to gh-pages... 
-      # This means there is no history being accumulated
-      - name: Push Changes to branch
-        uses: ad-m/github-push-action@master
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          force: true
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
